--- a/Raytracer/Raytracer.vcxproj
+++ b/Raytracer/Raytracer.vcxproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="sceneData.txt" />
+    <None Include="sceneData2.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
