--- a/Raytracer/Raytracer.vcxproj.filters
+++ b/Raytracer/Raytracer.vcxproj.filters
@@ -61,5 +61,8 @@
     <None Include="sceneData.txt">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="sceneData2.txt">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
